Checkpoint, we got webGL 2.0 working and windows OpenGL3.3 working with DLL API.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
 
-# Check if building with Emscripten
-if(EMSCRIPTEN)
-    message(STATUS "Building for Web platform with size optimization")
-    
-    # Define platform-specific compiler definitions
-    add_compile_definitions(PLATFORM_WEB GRAPHICS_API_OPENGL_ES2)
-    
-    # Set output to HTML files
-    set(CMAKE_EXECUTABLE_SUFFIX ".html")
-    
-    # Add Emscripten-specific compiler and linker flags with -Os for size optimization
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s ASSERTIONS=1")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Os -s USE_GLFW=3 -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s ASSERTIONS=1")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Os -s ASYNCIFY -s EXPORTED_RUNTIME_METHODS=ccall")
-    
-    # Web-specific build options
-    option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  # Force static for web
-else()
-    option(BUILD_SHARED_LIBS "Build shared libraries" OFF) # This affects only raylib, RayEngine will still be shared for desktop platforms
-endif()
-
 project(RayEngine VERSION 1.0.0 LANGUAGES C CXX)
 
 # Set C++20 standard
@@ -29,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Platform-specific settings
-if(UNIX AND NOT EMSCRIPTEN)
+if(UNIX)
     # Linux-specific settings
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
     set(CMAKE_INSTALL_RPATH "$ORIGIN")
@@ -38,16 +17,6 @@ endif()
 
 # Include FetchContent module
 include(FetchContent)
-
-# Fetch raylib - special handling for Emscripten
-if(EMSCRIPTEN)
-    # Force Web platform and OpenGL ES 2.0 for raylib
-    set(PLATFORM "Web" CACHE STRING "Platform" FORCE)
-    set(GRAPHICS "OpenGL_ES_2.0" CACHE STRING "Graphics API" FORCE)
-    
-    # Additional raylib-specific settings
-    set(SUPPORT_GESTURES_SYSTEM ON CACHE BOOL "" FORCE)
-endif()
 
 FetchContent_Declare(
     raylib
@@ -72,19 +41,12 @@ include_directories(${INCLUDE_DIR})
 file(GLOB_RECURSE SOURCES ${SOURCE_DIR}/*.cpp)
 
 # Create library - static for Emscripten, shared for other platforms
-if(EMSCRIPTEN)
-    add_library(${PROJECT_NAME} STATIC ${SOURCES})  # Static lib for web
-else()
-    add_library(${PROJECT_NAME} SHARED ${SOURCES})  # DLL/SO for desktop
-endif()
+add_library(${PROJECT_NAME} SHARED ${SOURCES})  # DLL/SO for desktop
 
 # Link with raylib
 target_link_libraries(${PROJECT_NAME} PUBLIC raylib)
 
-# Define RAYENGINE_EXPORTS when building the library
-if(NOT EMSCRIPTEN)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE RAYENGINE_EXPORTS)
-endif()
+target_compile_definitions(${PROJECT_NAME} PRIVATE RAYENGINE_EXPORTS)
 
 # Set the output directory
 set_target_properties(${PROJECT_NAME} PROPERTIES
