--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # Add the SimpleGameExample subdirectory
 add_subdirectory(SimpleGameExample)
+add_subdirectory(ComputeShaderExample)
+add_subdirectory(EngineTesting)
 
 # You can add additional examples here
 # add_subdirectory(AnotherExample)
